[gd_scene format=3 uid="uid://coju3uru7rrg"]

[ext_resource type="Script" uid="uid://cvdeuta4p7fk7" path="res://gun.gd" id="1_dk5gl"]
[ext_resource type="Texture2D" uid="uid://dabk6h120tdq6" path="res://Ui and buildings/spritesheets/Ranitayas Guns Pack (16+ pixelart guns)/Pistols/7Pistol07.png" id="2_kw0bs"]

[node name="gun" type="Node2D" unique_id=812043549]
script = ExtResource("1_dk5gl")

[node name="RotationOffset" type="Node2D" parent="." unique_id=361691638]

[node name="Sprite2D" type="Sprite2D" parent="RotationOffset" unique_id=1370680681]
position = Vector2(14, -0.5)
scale = Vector2(0.5, 0.625)
texture = ExtResource("2_kw0bs")

[node name="shadow" type="Sprite2D" parent="RotationOffset/Sprite2D" unique_id=759917625]
modulate = Color(0, 0, 0, 0.21568628)
texture = ExtResource("2_kw0bs")

[node name="Marker2D" type="Marker2D" parent="RotationOffset/Sprite2D" unique_id=147997660]
position = Vector2(8, -2.4)
scale = Vector2(2, 1.6)

[node name="ShootTimer" type="Timer" parent="." unique_id=213598995]
one_shot = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
